--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -53,7 +53,7 @@
     <!--preloader start-->
     <div id="preloader">
         <div class="preloader-wrap">
-            <img src="assets/img/favicon.png" alt="logo" class="img-fluid preloader-icon" />
+            <img src="{% static 'assets/img/favicon.png' %}" alt="logo" class="img-fluid preloader-icon" />
             <div class="loading-bar"></div>
         </div>
     </div>
@@ -67,8 +67,8 @@
             <nav class="navbar navbar-expand-xl navbar-dark sticky-header">
                 <div class="container d-flex align-items-center justify-content-lg-between position-relative">
                     <a href="index.html" class="navbar-brand d-flex align-items-center mb-md-0 text-decoration-none">
-                        <img src="assets/img/logo-white.png" alt="logo" class="img-fluid logo-white" />
-                        <img src="assets/img/logo-color.png" alt="logo" class="img-fluid logo-color" />
+                        <img src="{% static 'assets/img/logo-white.png' %}" alt="logo" class="img-fluid logo-white" />
+                        <img src="{% static 'assets/img/logo-color.png' %}" alt="logo" class="img-fluid logo-color" />
                     </a>
 
                     <a class="navbar-toggler position-absolute right-0 border-0" href="#offcanvasWithBackdrop" role="button">
