--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -67,8 +67,8 @@
             <nav class="navbar navbar-expand-xl navbar-dark sticky-header">
                 <div class="container d-flex align-items-center justify-content-lg-between position-relative">
                     <a href="index.html" class="navbar-brand d-flex align-items-center mb-md-0 text-decoration-none">
-                        <img src="{% static 'assets/img/logo-white.png' %}" alt="logo" class="img-fluid logo-white" />
-                        <img src="{% static 'assets/img/logo-color.png' %}" alt="logo" class="img-fluid logo-color" />
+                        <img src="{% static 'assets/img/main_logo.png' %}" alt="logo" class="img-fluid logo-white" height="90px" width="80px" />
+                        <img src="{% static 'assets/img/main_logo.png' %}" alt="logo" class="img-fluid logo-color" height="80px" width="70px" w/>
                     </a>
 
                     <a class="navbar-toggler position-absolute right-0 border-0" href="#offcanvasWithBackdrop" role="button">
