--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -151,8 +151,8 @@
                             <div class="icon-box rounded-custom bg-primary shadow-sm d-inline-block">
                                 <i class="fal fa-shield-check fa-2x text-white"></i>
                             </div>
-                            <h2>Advanced Analytics, Understand Business</h2>
-                            <p>Distinctively promote parallel vortals with ubiquitous e-markets. Proactively benchmark turnkey optimize next-generation strategic leadership without resource sucking ideas.</p>
+                            <h2>DOne Inventory Tracking</h2>
+                            <p>There is no one-size-fits-all when it comes to medications inventory tracking. Each customer has different workflows, storage issues,  and IT systems that make it almost impossible to find a solution  that integrates seamlessly while meeting all of your needs.​ That’s why we built Done RFID platform , the most advanced, versatile, and  easy to use automated tracking system available.​​ Its open architecture allows us to fully customize it to provide a  complete solution tailored to your specific needs.</p>
                             <ul class="list-unstyled d-flex flex-wrap list-two-col mt-4 mb-4">
                                 <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Thought leadership</li>
                                 <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Personal branding</li>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="col-lg-6 col-12">
                         <div class="feature-img-holder mt-4 mt-lg-0 mt-xl-0">
-                            <img src="{% static 'assets/img/screen/widget-11.png' %}" class="img-fluid" alt="feature-image">
+                            <img src="{% static 'assets/img/screen/inventory_img_home.png' %}" class="img-fluid" alt="feature-image">
                         </div>
                     </div>
                 </div>
@@ -183,16 +183,14 @@
                             <div class="icon-box rounded-custom bg-dark shadow-sm d-inline-block">
                                 <i class="fal fa-fingerprint fa-2x text-white"></i>
                             </div>
-                            <h2>Match Everything to Brand and Style</h2>
-                            <p>Intrinsicly pontificate reliable metrics with enabled. Holisticly maintain clicks-and-mortar manufactured products empower viral customer service through resource deliverables.</p>
-                            <p>Customer service through resource pontificate reliable metrics with enabled expedite resource maximizing information maintain manufactured products.</p>
-
+                            <h2>DOne Retail</h2>
+                            <p>Our RFID Tracking Platform empowers retailers to have accurate, real-time  visibility on inventory level that is not possible today. This will enable   omnichannel sales and reduces missed sales opportunities due to out of stock items.</p>
                             <a href="about-us.html" class="read-more-link text-decoration-none d-block mt-4">Know More About Us <i class="far fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-12 order-lg-0">
                         <div class="feature-img-holder mt-4 mt-lg-0 mt-xl-0">
-                            <img src="{% static 'assets/img/screen/widget-12.png' %}" class="img-fluid" alt="feature-image">
+                            <img src="{% static 'assets/img/screen/done_retail_image.png' %}" class="img-fluid" alt="feature-image">
                         </div>
                     </div>
                 </div>
@@ -200,6 +198,58 @@
         </section>
         <!--image feature section end-->
         <!--feature left right content end-->
+
+        <section class="why-choose-us ptb-120">
+            <div class="container">
+                <div class="row justify-content-lg-between align-items-center">
+                    <div class="col-lg-5 col-12">
+                        <div class="why-choose-content">
+                            <div class="icon-box rounded-custom bg-primary shadow-sm d-inline-block">
+                                <i class="fal fa-shield-check fa-2x text-white"></i>
+                            </div>
+                            <h2>DOne Healthcare</h2>
+                            <p>We help our healthcare customers offer exemplary patient care services with our proven Track RFID solutions that increase hand hygiene compliance, achieve 100% accuracy when restocking medication trays, and save cost and time while locating surgical instrument</p>
+                            <ul class="list-unstyled d-flex flex-wrap list-two-col mt-4 mb-4">
+                                <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Thought leadership</li>
+                                <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Personal branding</li>
+                                <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Modernized prospecting</li>
+                                <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Better win rates</li>
+                                <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Showcasing success</li>
+                                <li class="py-1"><i class="fas fa-check-circle me-2 text-primary"></i>Sales compliance</li>
+                            </ul>
+                            <a href="about-us.html" class="read-more-link text-decoration-none">Know More About Us <i class="far fa-arrow-right ms-2"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-12">
+                        <div class="feature-img-holder mt-4 mt-lg-0 mt-xl-0">
+                            <img src="{% static 'assets/img/screen/health_care_ins.png' %}" class="img-fluid" alt="feature-image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="image-feature pt-60 pb-120">
+            <div class="container">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-lg-5 col-12 order-lg-1">
+                        <div class="feature-img-content">
+                            <div class="icon-box rounded-custom bg-dark shadow-sm d-inline-block">
+                                <i class="fal fa-fingerprint fa-2x text-white"></i>
+                            </div>
+                            <h2>DOne Asset Tracking</h2>
+                            <p>Our DOne RFID Platform solutions help companies replace outdated manual & barcode inventory checks while achieving inventory checks that are 15x faster, stop inventory errors and prevent asset losses while replacing</p>
+                            <a href="about-us.html" class="read-more-link text-decoration-none d-block mt-4">Know More About Us <i class="far fa-arrow-right ms-2"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-12 order-lg-0">
+                        <div class="feature-img-holder mt-4 mt-lg-0 mt-xl-0">
+                            <img src="{% static 'assets/img/screen/assets_tracking.png' %}" class="img-fluid" alt="feature-image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!--customer review tab section start-->
         <section class="customer-review-tab ptb-120 bg-gradient text-white  position-relative z-2">
