--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -82,7 +82,7 @@
                                     Home
                                 </a>
                             </li>
-                            <li><a href="services.html" class="nav-link">Services</a></li>
+                            <li><a href="services.html" class="nav-link">DOne RFID App Suite</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Resources</a>
                                 <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
