--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -67,42 +67,77 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-10">
                         <div class="section-heading text-center">
-                            <h2>With all the Features You Need</h2>
-                            <p>Credibly grow premier ideas rather than bricks-and-clicks strategic theme areas distributed for stand-alone web-readiness.</p>
+                            <h2>We Provide Solutions for Better Business</h2>
+                            <p>DigitalOne Solutions provides modular AutoID turnkey
+                                solutions including hardware, software, services and support.
+                                From the first proof of concept to the go-live implementation,
+                                DigitalOne supports customers in applications for manufacturing
+                                and logistics, health care and intelligent transportation
+                                systems.</p>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="single-feature-promo p-lg-5 p-4 text-center mt-3">
                             <div class="feature-icon icon-center pb-5 rounded-custom bg-primary">
                                 <i class="fal fa-layer-group fa-2x text-white"></i>
                             </div>
                             <div class="feature-info-wrap">
-                                <h3 class="h5">Good Performance</h3>
-                                <p>Appropriately grow competitive leadership rather than strategic technically sound processes without state. </p>
+                                <h3 class="h5">Hardware</h3>
+                                <p>The DigitalOne's RFID readers based solutions are the leading
+                                    IoT devices for all industrial AutoID solutions. DigitalOne
+                                    Solutions hardware is the first choice for vehicle
+                                    identification in ruggedised environments. DigitalOne's
+                                    portfolio provides modularity for high-speed identification
+                                    and end-to-end security at the same time.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="single-feature-promo p-lg-5 p-4 text-center mt-3">
                             <div class="feature-icon icon-center pb-5 rounded-custom bg-danger">
                                 <i class="fal fa-shield-check fa-2x text-white"></i>
                             </div>
                             <div class="feature-info-wrap">
-                                <h3 class="h5">Highly Secure</h3>
-                                <p>Appropriately grow competitive leadership rather than strategic technically sound processes without state. </p>
+                                <h3 class="h5">Software</h3>
+                                <p>DigitalOne’s integration software layer, is a
+                                    modular IoT suite for different identification applications.
+                                    Passive UHF RFID, ANPR cameras, sensors and various
+                                    other technologies can be handled with CrossTalk. We
+                                    provide centrally controlled integration — from device
+                                    management to a customised handshake to backends
+                                    and traffic management solutions.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="single-feature-promo p-lg-5 p-4 text-center mt-3">
                             <div class="feature-icon icon-center pb-5 rounded-custom bg-dark">
                                 <i class="fal fa-code fa-2x text-white"></i>
                             </div>
                             <div class="feature-info-wrap">
-                                <h3 class="h5">Fast Development</h3>
-                                <p>Appropriately grow competitive leadership rather than strategic technically sound processes without state. </p>
+                                <h3 class="h5">Professional Services</h3>
+                                <p>Our services reflect the profound expertise of an
+                                    innovative technology leader acquired over a whole
+                                    century. Our experts and highly motivated teams work
+                                    on excellent solutions together with our partners and
+                                    customers. We offer reliable support in implementing
+                                    projects according to your high-quality standards.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="single-feature-promo p-lg-5 p-4 text-center mt-3">
+                            <div class="feature-icon icon-center pb-5 rounded-custom bg-dark">
+                                <i class="fal fa-code fa-2x text-white"></i>
+                            </div>
+                            <div class="feature-info-wrap">
+                                <h3 class="h5">Support</h3>
+                                <p>Our maintenance team support on site or remotely
+                                    with the appropriate service concepts, training of
+                                    local service personnel and build the backbone of a
+                                    professional maintenance concept.</p>
                             </div>
                         </div>
                     </div>
@@ -112,13 +147,13 @@
                         <div class="position-relative d-flex flex-column h-100 flex-wrap bg-danger-soft p-5 rounded-custom">
                             <div class="cta-left-info mb-2">
                                 <h5>Utilize your software data</h5>
-                                <p>Progressively reinvent models and niche revolutionary benefits for integrated niches. </p>
+                                <p>Using machine learning and data science develop BI(Business Inelegance) to help your business.</p>
                             </div>
                             <div class="mt-auto">
-                                <a href="request-demo.html" class="btn btn-outline-primary btn-sm">Start For Free</a>
+                                <a href="request-demo.html" class="btn btn-outline-primary btn-sm">More Details</a>
                             </div>
                             <div class="cta-img position-absolute right-0 bottom-0">
-                                <img src="{% static 'assets/img/cta-img-1.png' %}" alt="cta img" class="img-fluid">
+                                <img src="{% static 'assets/img/bi_and_data_science.png' %}" alt="cta img" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -126,13 +161,13 @@
                         <div class="position-relative d-flex flex-column h-100 flex-wrap bg-primary-soft p-5 rounded-custom">
                             <div class="cta-left-info mb-2">
                                 <h5>Get real time updated anytime</h5>
-                                <p>Progressively reinvent models and niche revolutionary benefits for integrated niches. </p>
+                                <p>Using real time build your business dashboard. Interact with the live dashboard and do more progress your business </p>
                             </div>
                             <div class="mt-auto">
-                                <a href="request-demo.html" class="btn btn-outline-primary btn-sm">Start For Free</a>
+                                <a href="request-demo.html" class="btn btn-outline-primary btn-sm">More Details</a>
                             </div>
                             <div class="cta-img position-absolute right-0 bottom-0">
-                                <img src="{% static 'assets/img/cta-img-2.png' %}" alt="cta img" class="img-fluid">
+                                <img src="{% static 'assets/img/real_time_dashboard.png' %}" alt="cta img" class="img-fluid">
                             </div>
                         </div>
                     </div>
