--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -142,6 +142,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <img src="{% static 'assets/img/services_dOneOne.png' %}" alt="cta img" class="img-fluid">
+                </div>
                 <div class="row pt-lg-5 pt-3">
                     <div class="col-lg-6 mt-4">
                         <div class="position-relative d-flex flex-column h-100 flex-wrap bg-danger-soft p-5 rounded-custom">
