--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -53,7 +53,7 @@
                                 </li>
                             </ul>
                             <!--animated shape end-->
-                            <img src="{% static 'assets/img/rfid_home_pic_1.png' %}" alt="hero img" class="img-fluid position-relative z-5" style="height: 400px;">
+                            <img src="{% static 'assets/img/rfid_home_pic_1.png' %}" alt="hero img" class="img-fluid position-relative z-5">
                         </div>
                     </div>
                 </div>
@@ -603,17 +603,14 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-10">
                         <div class="section-heading text-center">
-                            <h4 class="h5 text-primary">Process</h4>
-                            <h2>We Follow Our Work Process</h2>
-                            <p>Enthusiastically engage cross-media leadership skills for alternative experiences.
-                                Proactively drive vertical systems than intuitive architectures.</p>
+                            <h2>Our Approach</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-5 col-md-12 order-1 order-lg-0">
                         <div class="img-wrap">
-                            <img src="{% static 'assets/img/office-img-1.jpg' %}" alt="work process" class="img-fluid rounded-custom">
+                            <img src="{% static 'assets/img/project-approach.png' %}" alt="work process" class="img-fluid rounded-custom">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 order-0 order-lg-1">
@@ -623,10 +620,9 @@
                                     <i class="far fa-folder-tree fa-2x"></i>
                                 </div>
                                 <div class="icon-content">
-                                    <span class="text-primary h6">Step 1</span>
-                                    <h3 class="h5 mb-2">Research and Content Planing</h3>
-                                    <p>Progressively foster enterprise-wide systems whereas equity invested
-                                        web-readiness harness installed base bandwidth.
+                                    <h3 class="text-primary h5 mb-2">Full Adoption</h3>
+                                    <p>We support the rollout and available to guide you in
+                                    source-tagging items to ensure smooth operations.
                                     </p>
                                 </div>
                             </li>
@@ -635,10 +631,9 @@
                                     <i class="far fa-bezier-curve fa-2x"></i>
                                 </div>
                                 <div class="icon-content">
-                                    <span class="text-primary h6">Step 2</span>
-                                    <h3 class="h5 mb-2">Publishing and Execution</h3>
-                                    <p>Dramatically administrate progressive metrics without error-free globally simplify
-                                        standardized alignments plagiarize distributed.
+                                    <h3 class="text-primary h5 mb-2">Initial Rollout</h3>
+                                    <p>We guide your team and assist them in RFID solution
+                                        rollout, change management, and initial tagging
                                     </p>
                                 </div>
                             </li>
@@ -647,10 +642,42 @@
                                     <i class="far fa-layer-group fa-2x"></i>
                                 </div>
                                 <div class="icon-content">
-                                    <span class="text-primary h6">Step 3</span>
-                                    <h3 class="h5 mb-2">Product Prototyping</h3>
+                                    <h3 class="text-primary h5 mb-2">Product Prototyping</h3>
                                     <p>Interactively whiteboard transparent testing procedures before
                                         bricks-and-clicks initiatives administrate competencies.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-start mb-4 mb-lg-0">
+                                <div class="process-icon-2 border border-2 rounded-custom bg-white me-4 mt-2">
+                                    <i class="fa fa-bullhorn fa-2x"></i>
+                                </div>
+                                <div class="icon-content">
+                                    <h3 class="text-primary h5 mb-2">Pilot</h3>
+                                    <p>Leveraging our experience with RFID we deploy a pilot
+                                        site to ensure it meets requirements.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-start mb-4 mb-lg-0">
+                                <div class="process-icon-2 border border-2 rounded-custom bg-white me-4 mt-2">
+                                    <i class="fa fa-code-fork fa-2x"></i>
+                                </div>
+                                <div class="icon-content">
+                                    <h3 class="text-primary h5 mb-2">Solution Design</h3>
+                                    <p>Conduct a professional site survey and design
+                                        solution that meeting your business requirements
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-start mb-4 mb-lg-0">
+                                <div class="process-icon-2 border border-2 rounded-custom bg-white me-4 mt-2">
+                                    <i class="fa fa-briefcase fa-2x"></i>
+                                </div>
+                                <div class="icon-content">
+                                        <h3 class="text-primary h5 mb-2">Business Case</h3>
+                                    <p>Collaborate with you to develop and verify an ROI plan
+                                        specific to your business and outline the next steps
                                     </p>
                                 </div>
                             </li>
@@ -659,8 +686,7 @@
                                     <i class="far fa-truck fa-2x"></i>
                                 </div>
                                 <div class="icon-content">
-                                    <span class="text-primary h6">Step 4</span>
-                                    <h3 class="h5 mb-2">Deliver the Final Product</h3>
+                                    <h3 class="text-primary h5 mb-2">Deliver the Final Product</h3>
                                     <p>Dramatically plagiarize distributed progressive metrics without error-free globally simplify
                                         standardized alignments.
                                     </p>
