--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -66,7 +66,7 @@
         <header class="main-header position-absolute w-100">
             <nav class="navbar navbar-expand-xl navbar-dark sticky-header">
                 <div class="container d-flex align-items-center justify-content-lg-between position-relative">
-                    <a href="index.html" class="navbar-brand d-flex align-items-center mb-md-0 text-decoration-none">
+                    <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center mb-md-0 text-decoration-none">
                         <img src="{% static 'assets/img/main_logo.png' %}" alt="logo" class="img-fluid logo-white" height="90px" width="80px" />
                         <img src="{% static 'assets/img/main_logo.png' %}" alt="logo" class="img-fluid logo-color" height="80px" width="70px" w/>
                     </a>
@@ -82,9 +82,9 @@
                                     Home
                                 </a>
                             </li>
-                            <li><a href="services.html" class="nav-link">DOne RFID App Suite</a></li>
+                            <li><a href="{% url 'app_suite' %}" class="nav-link">DOne RFID App Suite</a></li>
                             <li><a href="{% url 'about_us' %}" class="nav-link">About Us</a></li>
-                            <li><a href="services.html" class="nav-link">Contact Us</a></li>
+                            <li><a href="{% url 'contact_us' %}" class="nav-link">Contact Us</a></li>
                         </ul>
                     </div>
 
@@ -101,7 +101,7 @@
                         <div class="offcanvas-body">
                             <ul class="nav col-12 col-md-auto justify-content-center main-menu">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="{% url 'home' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Home
                                     </a>
                                     <div class=" dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
