--- a/templates/website/contact_us.html
+++ b/templates/website/contact_us.html
@@ -16,6 +16,7 @@
     </div>
 </section>
 <!--hero section end-->
+<!--hero section end-->
 
 <!--contact us promo section start-->
 <section class="contact-promo ptb-120">
