--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -360,19 +360,12 @@
                     <div class="row justify-content-between">
                         <div class="col-md-8 col-lg-4 mb-md-4 mb-lg-0">
                             <div class="footer-single-col">
-                                <div class="footer-single-col mb-4">
-                                    <img src="{% static 'assets/img/logo-white.png' %}" alt="logo" class="img-fluid logo-white">
-                                    <img src="{% static 'assets/img/logo-color.png' %}" alt="logo" class="img-fluid logo-color">
-                                </div>
-                                <p>Our latest news, articles, and resources, we will sent to
-                                    your inbox weekly.</p>
-
-                                <form class="newsletter-form position-relative d-block d-lg-flex d-md-flex">
-                                    <input type="text" class="input-newsletter form-control me-2" placeholder="Enter your email" name="email" required="" autocomplete="off">
-                                    <input type="submit" value="Subscribe" data-wait="Please wait..." class="btn btn-primary mt-3 mt-lg-0 mt-md-0">
-                                </form>
+                                <h6 class="mb-0">Address</h6>
+                                <p></p>
                                 <div class="ratting-wrap mt-4">
-                                    <h6 class="mb-0">10/10 Overall rating</h6>
+                                    <p class="mb-0">1 Yonge St, Suite 1201</p>
+                                    <p class="mb-0">Toronto, ON M5E 1E5, </p>
+                                    <p class="mb-0">Canada</p>
                                     <ul class="list-unstyled rating-list list-inline mb-0">
                                         <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
                                         <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
