--- a/templates/website/contact_us.html
+++ b/templates/website/contact_us.html
@@ -39,10 +39,10 @@
                     <span class="fad fa-envelope fa-3x text-primary"></span>
                     <div class="contact-promo-info mb-4">
                         <h5>Email Us</h5>
-                        <p>Simple drop us an email at <strong>hellothemetags@gmail.com</strong>
+                        <p>Simple drop us an email at <strong>info@digitaloneconsulting.com</strong>
                             and you'll receive a reply within 24 hours</p>
                     </div>
-                    <a href="mailto:hellothemetags@gmail.com" class="btn btn-primary mt-auto">Email Us</a>
+                    <a href="mailto:info@digitaloneconsulting.com" class="btn btn-primary mt-auto">Email Us</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
