--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -77,11 +77,7 @@
                     <div class="clearfix"></div>
                     <div class="collapse navbar-collapse justify-content-center">
                         <ul class="nav col-12 col-md-auto justify-content-center main-menu">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="{% url 'home' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Home
-                                </a>
-                            </li>
+                            <li><a href="{% url 'home' %}" class="nav-link">Home</a></li>
                             <li><a href="{% url 'app_suite' %}" class="nav-link">DOne RFID App Suite</a></li>
                             <li><a href="{% url 'about_us' %}" class="nav-link">About Us</a></li>
                             <li><a href="{% url 'contact_us' %}" class="nav-link">Contact Us</a></li>
