--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -80,6 +80,7 @@
                             <li><a href="{% url 'home' %}" class="nav-link">Home</a></li>
                             <li><a href="{% url 'app_suite' %}" class="nav-link">DOne Features</a></li>
                             <li><a href="{% url 'app_suite' %}" class="nav-link">DOne RFID App Suite</a></li>
+                            <li><a href="{% url 'esl' %}" class="nav-link">ESL</a></li>
                             <li><a href="{% url 'about_us' %}" class="nav-link">About Us</a></li>
                             <li><a href="{% url 'contact_us' %}" class="nav-link">Contact Us</a></li>
                             {% if user.is_authenticated %}
