--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -431,7 +431,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-7 col-lg-7">
                             <div class="copyright-text">
-                                <p class="mb-lg-0 mb-md-0">&copy; 2021 DigitalOne Rights Reserved. Designed By <a href="https://themetags.com/" class="text-decoration-none">ThemeTags</a></p>
+                                <p class="mb-lg-0 mb-md-0">&copy; 2021 DigitalOne Rights Reserved. Designed  and developed by <a href="https://www.linkedin.com/in/md-mustafizur-rahman-a69a18a8" class="text-decoration-none">SojibMustafiz</a></p>
                             </div>
                         </div>
                         <div class="col-md-4 col-lg-4">
